# Todo-App-Phase-Hackathon

phase-I/: README.md  pyproject.toml
phase-I/history/prompts/1-console-todo/: 002-specify-console-todo.spec.prompt.md  003-plan-console-todo.plan.prompt.md  004-implement-console-todo.green.prompt.md  005-restructure-todo-app.refactor.prompt.md
phase-I/history/prompts/constitution/: 001-initial-constitution.constitution.prompt.md
phase-I/specs/1-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-I/specs/1-console-todo/checklists/: requirements.md
phase-I/src/phase_i_hackathon_ii/: __init__.py
phase-I/src/todo_app/: __main__.py
phase-I/src/todo_app/cli/: interface.py
phase-I/src/todo_app/models/: task.py
phase-I/src/todo_app/repositories/: task_repository.py
phase-I/src/todo_app/services/: todo_service.py
phase-I/tests/: conftest.py  test_app.py
